--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>New Website</title>
   </head>
   <body>
-    <h1>Title</h1>
+    <header>
+      <h1>Speedrunning</h1>
+      <h2>A Brief Introduction</h2>
+    </header>
+    <main>
+      <h3>What is speedrunning?</h3>
+      <div class="content1">
+        <p>
+          Speedrunning is the act of playing a video game, or section of a video
+          game, with the goal of completing it as fast as possible. Speedrunning
+          often involves following planned routes, which may incorporate
+          sequence breaking and can exploit glitches that allow sections to be
+          skipped or completed more quickly than intended.
+        </p>
+        <img
+          src="https://images.pexels.com/photos/133579/pexels-photo-133579.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="Gamer"
+        />
+      </div>
+      <h3>Why do people speedrun?</h3>
+      <ul>
+        <li>Personal Challenge</li>
+        <li>Braggin Rights</li>
+        <li>Raising Money for Chariy</li>
+      </ul>
+    </main>
   </body>
 </html>
