--- a/index.html
+++ b/index.html
@@ -9,30 +9,29 @@
   </head>
   <body>
     <header>
-      <h1>Speedrunning</h1>
-      <h2>A Brief Introduction</h2>
+      <h1>Food From Around The World</h1>
+      <h2>Italy</h2>
     </header>
     <main>
-      <h3>What is speedrunning?</h3>
+      <h3>Spaghetti Carbonara</h3>
       <div class="content1">
         <p>
-          Speedrunning is the act of playing a video game, or section of a video
-          game, with the goal of completing it as fast as possible. Speedrunning
-          often involves following planned routes, which may incorporate
-          sequence breaking and can exploit glitches that allow sections to be
-          skipped or completed more quickly than intended.
+          Carbonara is a pasta dish made with eggs, hard cheese, cured pork, and
+          black pepper. The dish took its modern form and name in the middle of
+          the 20th century. The cheese is usually Pecorino Romano, parmesan, or
+          a combination of the two. Spaghetti is the most common pasta, but
+          fettuccine, rigatoni, linguine, or bucatini are also used. Normally
+          guanciale or pancetta are used for the meat component, but lardons of
+          smoked bacon are a common substitute outside Italy.
         </p>
         <img
-          src="https://images.pexels.com/photos/133579/pexels-photo-133579.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          src="https://static01.nyt.com/images/2021/02/14/dining/carbonara-horizontal/carbonara-horizontal-master768-v2.jpg?w=1280&q=75"
           alt="Gamer"
         />
       </div>
-      <h3>Why do people speedrun?</h3>
-      <ul>
-        <li>Personal Challenge</li>
-        <li>Braggin Rights</li>
-        <li>Raising Money for Chariy</li>
-      </ul>
     </main>
+    <footer>
+      <p>This wesbite was designed by GJ of Breakout Room 5</p>
+    </footer>
   </body>
 </html>
