--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
           src="https://static01.nyt.com/images/2021/02/14/dining/carbonara-horizontal/carbonara-horizontal-master768-v2.jpg?w=1280&q=75"
           alt="Spaghetti Carbonara"
         />
+
+        <div class="flag">
+          <div id="left"></div>
+          <div id="mid"></div>
+          <div id="right"></div>
+        </div>
       </div>
     </main>
     <footer>
