--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
           <div id="mid"></div>
           <div id="right"></div>
         </div>
+
+        <h3>Hungry for more?</h3>
+        <p>Why not try:</p>
+        <ul>
+          <li>
+            <a href="https://samueledraper.github.io/lab-04-html/"
+              >Spanish Paella</a
+            >
+          </li>
+        </ul>
       </div>
     </main>
     <footer>
