--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>
           Food From Around The World for
           <script>
-            document.write(name);
+            addName();
           </script>
         </h1>
         <h2>Italy</h2>
